--- a/Portfolio1/Assets/CSS/Mainskills.css
+++ b/Portfolio1/Assets/CSS/Mainskills.css
@@ -43,3 +43,8 @@ input{
     border-radius: 50%;
     border: 8px solid #65ff00;
 }
+@media (max-width: 576px) {
+    .Progress{
+        margin: 2.3rem 0rem;
+    }
+}
