--- a/Portfolio1/Assets/CSS/Ourportfolio.css
+++ b/Portfolio1/Assets/CSS/Ourportfolio.css
@@ -48,7 +48,7 @@
     margin: 10.7rem 0rem 0rem 7.5rem;
 }
 .card-featured-3{
-    margin: 1.5rem 0rem 0rem 7.5rem;
+    margin: 6rem 0rem 0rem 7.5rem;
 }
 .card{
     background-color: rgb(17, 17, 17);
@@ -61,6 +61,9 @@
     cursor: pointer;
     margin-top: -0.5rem;
     transition: 0.5s;
+}
+.card:hover .card-body i{
+    color: #fff;
 }
 .card-body{
     font-family: sans-serif;
